Bug 388763 - File selector does not show the correct files
Summary: File selector does not show the correct files
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: importer (other bugs)
Version First Reported In: git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-01-10 02:27 UTC by Alexandre
Modified: 2018-03-28 07:59 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.0
Sentry Crash Report:


Attachments
Patch to kmymoney 5.0 branch (1.84 KB, patch)
2018-01-10 02:27 UTC, Alexandre
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexandre 2018-01-10 02:27:30 UTC
Created attachment 109777 [details]
Patch to kmymoney 5.0 branch

The setFilter options in the code are not set correctly (example Kmymoney .kmy files) and on the ofx importer. The added patch fix the ones I could find. The syntax according to documentation uses ";;"as a separator and always requires the file selector.
Comment 1 Thomas Baumgart 2018-01-10 20:35:48 UTC
Git commit d16c1ae93a8bb17c7ecb1663d69c74c7b823185f by Thomas Baumgart.
Committed on 10/01/2018 at 20:35.
Pushed by tbaumgart into branch '5.0'.

Fix file selection filters

Added patch as provided by Alexandre Peixoto Ferreira
FIXED-IN: 5.0

M  +1    -1    kmymoney/dialogs/settings/ksettingsreports.ui
M  +1    -1    kmymoney/plugins/ofx/import/ofximporter.cpp
M  +1    -1    kmymoney/wizards/newuserwizard/kfilepage.cpp

https://commits.kde.org/kmymoney/d16c1ae93a8bb17c7ecb1663d69c74c7b823185f