Fix file selection filters

Added patch as provided by Alexandre Peixoto Ferreira

BUG: 388763
FIXED-IN: 5.0