kmymoney/plugins/ofx/import/ofximporter.cpp
@@ -121,7 +121,7 @@ void OFXImporter::slotImportFile()
 
   QUrl url = importInterface()->selectFile(i18n("OFX import file selection"),
              "",
-             "*.ofx *.qfx *.ofc|OFX files (*.ofx, *.qfx, *.ofc)\n*|All files",
+             "*.ofx *.qfx *.ofc|OFX files (*.ofx *.qfx *.ofc);;*|All files (*)",
              QFileDialog::ExistingFile,
              widget);
 
